--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -5,6 +5,6 @@
     <title>Welcome</title>
 </head>
 <body>
-    <h1>Hello, {{ user }}!</h1>
+    <h1 id="greeting">Hello, {{ user }}!</h1>
 </body>
 </html>
